--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <junit.version>5.8.1</junit.version>
     </properties>
-
+            <!--Dependencies section-->
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -43,7 +43,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
+            <!--Build section -->
     <build>
         <plugins>
             <plugin>
@@ -71,13 +71,18 @@
             </plugin>
         </plugins>
     </build>
-
+            <!--Reporting Section-->
     <reporting>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>3.0.0-M3</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.0.0</version>
             </plugin>
         </plugins>
     </reporting>
