--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <junit.version>5.8.1</junit.version>
     </properties>
-            <!--Dependencies section-->
+            <!--====================Dependencies section================-->
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -43,7 +43,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-            <!--Build section -->
+            <!-- ============Build section===================== -->
     <build>
         <plugins>
             <plugin>
@@ -71,7 +71,7 @@
             </plugin>
         </plugins>
     </build>
-            <!--Reporting Section-->
+            <!---==================Reporting Section===================-->
     <reporting>
         <plugins>
             <plugin>
