--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <junit.version>5.8.2</junit.version>
+        <surefire_failsafe.plugin.version>3.0.0-M5</surefire_failsafe.plugin.version>
+
     </properties>
 
     <dependencies>
@@ -48,12 +51,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18</version>
+                <version>${surefire_failsafe.plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M2</version>
+                <version>${surefire_failsafe.plugin.version}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -72,7 +75,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>${surefire_failsafe.plugin.version}</version>
             </plugin>
         </plugins>
     </reporting>
+</project>
